# agility

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
agility-macros/: Cargo.toml  README.md
agility-macros/src/: lib.rs
src/: api.rs  concurrent.rs  lib.rs  signal.rs  signal_sync.rs  signal_v2.rs  signals.rs
tests/: proc_macro_tests.rs  trybuild_tests.rs
