[package]
name = "agility-macros"
version = "0.1.0"
edition = "2024"
authors = ["Agility Contributors"]
license = "MIT OR Apache-2.0"
description = "Procedural macros for the Agility reactive programming library"
repository = "https://github.com/ICmd-dev/agility"
documentation = "https://docs.rs/agility-macros"
homepage = "https://github.com/ICmd-dev/agility"
readme = "../README.md"
keywords = ["reactive", "signals", "macros", "derive"]
categories = ["asynchronous", "data-structures"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
